Checkpoint for form.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,
     900&family=Sofia&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+        <script src="script.js" defer></script>
     <title>The Library</title>
 </head>
 <body>
@@ -17,6 +17,27 @@
         <button class="add-book">
             ADD BOOK
         </button>
+        <form action="" method="get" class="add-book-form">
+            <div>
+                <label for="name">BOOK TITLE</label>
+                <input type="text" name="title" id="title" required>
+            </div>
+            <div>
+                <label for="name">AUTHOR</label>
+                <input type="text" name="author" id="author" required>
+            </div>
+            <div>
+                <label for="text">NO. PAGES</label>
+                <input type="text" name="numPages" id="numPages" required>
+            </div>
+            <div>
+                <label for="text">READ?</label>
+                <input type="button">
+            </div>
+            <div>
+                <input type="submit" value="Submit">
+            </div>
+        </form>
     </div>
 </body>
 </html>
