Finished the form for adding a book to the shelf. Now we need to work on the actual shelf.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             </div>
             <div>
                 <label for="text">READ?</label>
-                <input type="button">
+                <button type="button" name="is_read" id="is_read">
+                    No
+                </button>
             </div>
             <div>
                 <input type="submit" value="Submit">
