--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
                 </button>
             </div>
             <div>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" id="submit" onclick="addBookToLibrary()">
             </div>
         </form>
+        <div class="shelf-area">
+            
+        </div>
     </div>
 </body>
 </html>
