Having a great start on the shelf. Will try to finish more, if not all, tomorrow.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </form>
         <div class="shelf-area">
-            
+            <div></div>
         </div>
     </div>
 </body>
