Finished adding some responsiveness to the side of the page, will start working on the shelves soon.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div>
                 <label for="text">NO. PAGES</label>
-                <input type="text" name="numPages" id="numPages" required>
+                <input inputmode="numeric" type="number" name="numPages" id="numPages" min="49" placeholder="A book is defined by at least 49 pages." required>
             </div>
             <div>
                 <label for="text">READ?</label>
@@ -41,7 +41,7 @@
             </div>
         </form>
         <div class="shelf-area">
-            <div></div>
+            
         </div>
     </div>
 </body>
