Finished making some changes so the form is actually only submitting when it is filled out. Had some trouble with this, and got some help with it.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </button>
             </div>
             <div>
-                <input type="submit" value="Submit" id="submit" onclick="addBookToLibrary(); addShelf()">
+                <input type="submit" value="Submit" id="submit">
             </div>
         </form>
         <div class="shelf-area">
