Almost finished, just want to save my work so far, and take a break for now, so I can come back later with a fresher mind.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <button class="add-book">
             ADD BOOK
         </button>
+        <button class="delete-book">
+            DELETE BOOK
+        </button>
         <form action="" method="get" class="add-book-form" id="book-form">
             <div>
                 <label for="name">BOOK TITLE</label>
